Adding final project with allure manual